# simple-to-do-app

./: README.md  pyproject.toml
mytodo/: db.sqlite3
mytodo/mytodo/: settings.py  urls.py
mytodo/mytodoapp/: models.py  urls.py  views.py
mytodo/mytodoapp/migrations/: 0001_initial.py  0002_auto_20251017_2224.py  0003_auto_20251017_2253.py  0004_auto_20251017_2302.py
mytodo/mytodoapp/static/css/: form.css  navigation.css  tasklist.css
mytodo/mytodoapp/templates/: index.html  starter.html  tasklist.html
