[tool.poetry]
name = "simple-to-do-app" 
version = "1.0.0"         
description = "A simple To-Do application"
authors = ["Shem Ndaro Ngugi<ndaroshem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# ... other dependencies here ...

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"